--- a/conplake/WebContent/WEB-INF/views/edit_setList.html
+++ b/conplake/WebContent/WEB-INF/views/edit_setList.html
@@ -10,8 +10,8 @@
 
 <div id="concertSetlist">
 	<h3 class="concert_subTitle">세트리스트
-    	<input id="submit_setList" class="innerButton button" type="submit" value="저장" onclick=""/>
-        <input id="edit_setList" class="innerButton button" type="button" value="행 추가" onclick="createRow()"/>
+    	<input id="submit_setList" class="innerButton" type="submit" value="저장" onclick=""/>
+        <input id="edit_setList" class="innerButton" type="button" value="행 추가" onclick="createRow()"/>
         
     </h3>
 	<Table id="table_setList">
