--- a/conplake/WebContent/WEB-INF/views/info_concert.html
+++ b/conplake/WebContent/WEB-INF/views/info_concert.html
@@ -8,8 +8,8 @@
 	<h1>CONCERT INFORMATION</h1>
         	<h2 id="concertTitle">쏜애플(THORNAPPLE) 콘서트 ‘한낮’
             	<div id="innerButtonBox">
-                    <input id="GoTogether" class="innerButton button" type="button" value="함께가요" onclick=""/>
-                    <input id="likeToGo" class="innerButton button" type="button" value="갈거예요" onclick=""/>
+                    <input id="GoTogether" class="innerButton" type="button" value="함께가요" onclick=""/>
+                    <input id="likeToGo" class="innerButton" type="button" value="갈거예요" onclick=""/>
                 </div>
             </h2>
             
@@ -61,7 +61,7 @@
                     
                   
                 </Table>
-                <p id="p_setList"><input id="edit_setList" class="innerButton button" type="button" value="수정"/></p>
+                <p id="p_setList"><input id="edit_setList" class="innerButton" type="button" value="수정"/></p>
             </div>
             
             
@@ -163,7 +163,7 @@
                         <a href="#">9</a>
                         <a href="#" class="page" id="page_next">></a>
                     </span>
-                <input id="write_review" class="innerButton button" type="button" value="후기 작성"/></p>
+                <input id="write_review" class="innerButton" type="button" value="후기 작성"/></p>
             </div>
             
             <footer></footer>
