--- a/conplake/WebContent/WEB-INF/views/info_hall.html
+++ b/conplake/WebContent/WEB-INF/views/info_hall.html
@@ -214,8 +214,8 @@ h1 {font:20px Arial, Helvetica, sans-serif; font-weight:600; color:#999; padding
 #concertTitle {width:900px; height:60px; line-height:30px; font-size:18px; display:inline-block;}
 
 #innerButtonBox {width:215px; height:30px; float:right; display:inline-block;}
-.innerButton {width:100px; height:30px; background:#C30D22; padding:0; margin:0; border:none; border-radius:0; float:right;}
-.innerButton:hover {background:#ae0115;}
+
+
 
 #likeToGo {margin-right:15px;}
 
@@ -388,8 +388,8 @@ input#write_review:hover { background:#444;}
         	<h1>HALL INFORMATION</h1>
         	<h2 id="concertTitle">쏜애플(THORNAPPLE) 콘서트 ‘한낮’
             	<div id="innerButtonBox">
-                    <input id="GoTogether" class="innerButton button" type="button" value="함께가요" onclick=""/>
-                    <input id="likeToGo" class="innerButton button" type="button" value="갈거예요" onclick=""/>
+                    <input id="GoTogether" class="innerButton" type="button" value="함께가요" onclick=""/>
+                    <input id="likeToGo" class="innerButton" type="button" value="갈거예요" onclick=""/>
                 </div>
             </h2>
             
@@ -530,7 +530,7 @@ input#write_review:hover { background:#444;}
                         <a href="#">9</a>
                         <a href="#" class="page" id="page_next">></a>
                     </span>
-                <input id="write_review" class="innerButton button" type="button" value="후기 작성"/></p>
+                <input id="write_review" class="innerButton" type="button" value="후기 작성"/></p>
             </div>
             
             
