--- a/conplake/WebContent/resources/css/common.css
+++ b/conplake/WebContent/resources/css/common.css
@@ -4,6 +4,8 @@
 
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, form, fieldset, p, button{ margin: 0; padding: 0;}
 
+.innerButton {width:100px; height:30px; background:-webkit-linear-gradient(#fff, #fff, #f9f9f9); padding:0; margin:0; border:1px solid #ccc; border-radius:0; float:right; color:#333; font-size:12px; !important} 
+.innerButton:hover{ background:#f9f9f9;}
 
 img {border:none;}
 ul li{ list-style:none;}
